Update github link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <p id="current-count">0</p>
       <button id="lower-count" class="lower-count">LOWER COUNT </button>
       <button id="add-count" class="add-count">ADD COUNT</button>
-      <i class="fa fa-github fa-2x"><a href="https://github.com/AyoOlu1/sidehustle-jscounter"></a></i>
+      <a href="https://github.com/AyoOlu1/sidehustle-jscounter"><i class="fa fa-github fa-2x"></i></a>
     </div>
   </div>
 
